<resources>
    <string name="app_name">TestByLat</string>
    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">5c887cfd</string>

    <string name="hot">首页</string>
    <string name="all">理财</string>
    <string name="discovery">发现</string>
    <string name="me">我的</string>

    <string name="share">分享</string>
    <string name="cancel">取消</string>


    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="login_name_hint">请输入手机号码</string>
    <string name="login_name_ver">验证码</string>
    <string name="login_name_hint_ver">请输入验证码</string>
    <string name="login_ver">获取验证码</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="investment_title">产品</string>

    <array name="refresh_text">
        <item>正在刷新</item>
        <item>正在攻克地心引力，请稍后</item>
        <item>正在刷新</item>

    </array>

    <string name="bottom_sheet_photolist">从相册选择</string>
    <string name="bottom_sheet_takephoto">拍一张</string>
    <string name="cancle">取消</string>


    <!--<string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、-->
    <!--口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”&#8230;</string>-->

    <string name="text_tts_source">金額は8桁の数字にはできない 取引処理については、請求書の詳細について確認してください</string>


    <!-- 合成 -->
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>

    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="voicer_local_entries">
        <item>小燕</item>
        <item>小峰</item>
    </string-array>

    <string-array name="voicer_local_values">
        <item>xiaoyan</item>
        <item>xiaofeng</item>
    </string-array>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>en_us</item>
    </string-array>


    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>


    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>


    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>

    <string name="alivc_longvideo_toast_add_download">已添加至缓存列表</string>
    <string name="alivc_longvideo_cache_toast_4g">连接wifi，或允许运营商下载</string>
    <string name="alivc_longvideo_doawload_operator">运营商网络下载</string>
    <string name="alivc_longvideo_player_loacl_cache_toast">本地视频无法缓存</string>
    <string name="alivc_longvideo_player_vip_cache_toast">非会员无法缓存VIP视频</string>
    <string name="alivc_longvideo_series_all_number_list">全%d集</string>

    <string name="alivc_longvideo_more_content">更多</string>
    <string name="alivc_longvideo_play_consult">当前视频</string>
    <string name="alivc_longvideo_play_similar_videolist">猜你喜欢</string>

    <string name="alivc_longvideo_quality_sd">LD</string>
    <string name="alivc_longvideo_quality_hd">SD</string>
    <string name="alivc_longvideo_quality_ssd">HD</string>
    <string name="alivc_longvideo_quality_chinese_sd">标清</string>
    <string name="alivc_longvideo_quality_chinese_hd">高清</string>
    <string name="alivc_longvideo_quality_chinese_ssd">超清</string>
</resources>
